# WINDIGO

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
docs/source/: conf.py
examples/: covarianceMatrix_13Groups_Be9_MT_2_Absolute.csv  covarianceMatrix_13Groups_Be9_MT_2_Relative.csv  full_workflow_with_jezebel_1.ipynb  full_workflow_with_jezebel_2.ipynb  full_workflow_with_jezebel_3.ipynb  general_sandy_frendy_functionality.ipynb
scripts/: FRENDYFunctions.py  FRENDYInternalFunctions.py  FRENDYMainFunctions.py  OpenMCFunctions.py  OpenMCInternalFunctions.py  OpenMCMainFunctions.py  SandyFunctions.py  SandyInternalFunctions.py  SandyMainFunctions.py
tests/: test_build_perturbed_cross_sections_libraries.py  test_calculate_absolute_backward_coefficient_error.py  test_calculate_absolute_central_coefficient_errors.py  test_calculate_absolute_forward_coefficient_errors.py  test_calculate_backward_coefficients.py  test_calculate_central_coefficients.py  test_calculate_direct_perturbation_uncertainty.py  test_calculate_direct_perturbation_variance_error.py  test_calculate_forward_coefficients.py  test_calculate_mean_error.py  test_calculate_random_sampling_uncertainty.py  test_calculate_random_sampling_variance_error.py  test_calculate_uncertainty_error.py  test_check_input_types.py  test_convert_per_lethargy.py  test_count_directories.py  test_create_direct_perturbation_command_file.py  test_create_direct_perturbation_inputs.py  test_create_direct_perturbation_list.py  test_create_model_folders.py  test_create_numbers.py  test_create_perturbed_xml.py  (+23 more)
(+32 files in other folders)
