[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "WINDIGO"
version = "0.0.1-beta"
authors = [
    { name = "Jacob Wisienski", email = "jacobwisienski86@gmail.com" }
]
description = "WINDIGO - The Workflow Integrating Nuclear Data InvestiGations into Openmc"
dependencies = []
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]